--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <header>
   <nav>
     <ul>
-      <li><a href="about">about</a></li>
-      <li><a href="projects">projects</a></li>
+      <li><a href="about">about</a>|</li>
+      <li><a href="projects">projects</a>|</li>
       <li><a href="contact">contact</a></li>
     </ul>
   </nav>
