--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!-- header+main>(section#about>.text+figure>figcaption)+(section#projects>(article.project>.image+details>summary)*3)^footer -->
+<head>
+  <link rel="stylesheet" href="styles.css" />
+</head>
 <header>
   <nav>
     <ul>
-      <li><a href="about">about</a>|</li>
-      <li><a href="projects">projects</a>|</li>
-      <li><a href="contact">contact</a></li>
+      <li><a href="index.html#">home</a></li>
+      <div>|</div>
+      <li><a href="index.html#about">about</a></li>
+      <div>|</div>
+      <li><a href="index.html#projects">projects</a></li>
+      <div>|</div>
+      <li><a href="contact.html">contact</a></li>
     </ul>
   </nav>
 </header>
