add header heading

--- a/index.html
+++ b/index.html
@@ -1,46 +1,49 @@
+<!-- @format -->
+
 <!-- header+main>(section#about>.text+figure>figcaption)+(section#projects>(article.project>.image+details>summary)*3)^footer -->
 <head>
-  <link rel="stylesheet" href="styles.css" />
+	<link rel="stylesheet" href="styles.css" />
 </head>
 <header>
-  <nav>
-    <ul>
-      <li><a href="index.html#">home</a></li>
-      <div>|</div>
-      <li><a href="index.html#about">about</a></li>
-      <div>|</div>
-      <li><a href="index.html#projects">projects</a></li>
-      <div>|</div>
-      <li><a href="contact.html">contact</a></li>
-    </ul>
-  </nav>
+	<nav>
+		<ul>
+			<li><a href="index.html#">home</a></li>
+			<div>|</div>
+			<li><a href="index.html#about">about</a></li>
+			<div>|</div>
+			<li><a href="index.html#projects">projects</a></li>
+			<div>|</div>
+			<li><a href="contact.html">contact</a></li>
+		</ul>
+	</nav>
 </header>
 <main>
-  <section id="about">
-    <div class="text"></div>
-    <figure>
-      <figcaption></figcaption>
-    </figure>
-  </section>
-  <section id="projects">
-    <article class="project">
-      <div class="image"></div>
-      <details>
-        <summary></summary>
-      </details>
-    </article>
-    <article class="project">
-      <div class="image"></div>
-      <details>
-        <summary></summary>
-      </details>
-    </article>
-    <article class="project">
-      <div class="image"></div>
-      <details>
-        <summary></summary>
-      </details>
-    </article>
-  </section>
+	<h1>My Portfolio</h1>
+	<section id="about">
+		<div class="text"></div>
+		<figure>
+			<figcaption></figcaption>
+		</figure>
+	</section>
+	<section id="projects">
+		<article class="project">
+			<div class="image"></div>
+			<details>
+				<summary></summary>
+			</details>
+		</article>
+		<article class="project">
+			<div class="image"></div>
+			<details>
+				<summary></summary>
+			</details>
+		</article>
+		<article class="project">
+			<div class="image"></div>
+			<details>
+				<summary></summary>
+			</details>
+		</article>
+	</section>
 </main>
 <footer>copyright</footer>
