--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <header>
+  <h1>My Portfolio</h1>
   <nav>
     <ul>
       <li><a href="index.html#">home</a></li>
