--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="styles.css" />
 </head>
 <header>
-<<<<<<< HEAD
+	<h1>Store Tissemænd</h1>
 	<nav>
 		<ul>
 			<li><a href="index.html#">home</a></li>
@@ -17,20 +17,6 @@
 			<li><a href="contact.html">contact</a></li>
 		</ul>
 	</nav>
-=======
-  <h1>My Portfolio</h1>
-  <nav>
-    <ul>
-      <li><a href="index.html#">home</a></li>
-      <div>|</div>
-      <li><a href="index.html#about">about</a></li>
-      <div>|</div>
-      <li><a href="index.html#projects">projects</a></li>
-      <div>|</div>
-      <li><a href="contact.html">contact</a></li>
-    </ul>
-  </nav>
->>>>>>> 2e5e31bc7d6275287be25c2f36f4e9505c5c9514
 </header>
 <main>
 	<h1>My Portfolio</h1>
